Fixed overflowing error

--- a/src/App.css
+++ b/src/App.css
@@ -15,39 +15,56 @@
   --lightShadow: 2px 5px 3px 0px rgba(0, 0, 0, 0.5);
   --darkShadow: 4px 10px 5px 0px rgba(0, 0, 0, 0.5);
 }
+
+@font-face {
+  font-family: "Century Gothic";
+  src: url("./fonts/gothicb.ttf");
+}
+
+@font-face {
+  font-family: "Avenir Roman";
+  src: url("./fonts/AvenirLTStd-Roman.otf");
+}
+
 /* globals */
 body {
   padding-top: 66px;
   color: var(--mainBlack);
   background: var(--mainWhite);
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: Avenir Roman, sans-serif;
   line-height: 1.4;
 }
 h1 {
+  font-family: Century Gothic, sans-serif;
   font-size: 3em;
   line-height: 1;
   margin-bottom: 0.5em;
 }
 h2 {
+  font-family: Century Gothic, sans-serif;
   font-size: 2em;
   margin-bottom: 0.75em;
 }
 h3 {
+  font-family: Century Gothic, sans-serif;
   font-size: 1.5em;
   line-height: 1;
   margin-bottom: 1em;
 }
 h4 {
+  font-family: Century Gothic, sans-serif;
   font-size: 1.2em;
   line-height: 1.25;
   margin-bottom: 1.25em;
 }
 h5 {
+  font-family: Century Gothic, sans-serif;
   font-size: 1em;
   font-weight: bold;
   margin-bottom: 1.5em;
 }
 h6 {
+  font-family: Century Gothic, sans-serif;
   font-size: 1em;
   font-weight: bold;
   margin-bottom: 1.5em;
@@ -94,6 +111,7 @@ h6 {
   top: 0;
   left: 0;
   width: 100%;
+  height: 7vh;
   padding: 0.75rem 2rem;
   background: var(--offWhite);
   z-index: 10;
@@ -113,15 +131,16 @@ h6 {
   color: var(--primaryColor);
 }
 .nav-logo {
+  position: relative;
   width: 100%;
-  max-width: 70px;
+  max-width: 8vh;
   height: auto;
 }
 .nav-links {
-  height: 0;
   overflow: hidden;
   transition: var(--mainTransition);
   list-style-type: none;
+  margin: 1vh;
 }
 .nav-links a {
   display: block;
@@ -139,9 +158,12 @@ h6 {
 }
 
 .show-nav {
-  height: 100px;
+  background-color: white;
+  width: 100%;
+  height: 20vh;
 }
-@media screen and (min-width: 768px) {
+
+@media screen and (min-width: 1020px) {
   .nav-btn {
     display: none;
   }
@@ -158,6 +180,10 @@ h6 {
   .nav-links a {
     margin: 0 1rem;
     padding: 0.5rem 0;
+  }
+
+  .show-nav {
+    height: 0px;
   }
 }
 /* end of navbar */
