--- a/src/Carousel.scss
+++ b/src/Carousel.scss
@@ -9,6 +9,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 .slides {
